wtx-macros-tests/tests/fail/unknown_transport.stderr
error: Unknown transport.
 --> tests/fail/unknown_transport.rs:1:59
  |
1 | #[wtx_macros::pkg(data_format(json), id(FooId), transport(dasdasd))]
  |                                                           ^^^^^^^

error: aborting due to 1 previous error

